cleaning up auth module
